# talaria-of-mercury

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
assets/: AGENTS.md  build_logo.py  build_logo_grid.py
assets/benchmark/vision/: generate_vision_fixtures.py  ground_truth.json
docs/: AGENTS.md  MCP-PROXY.md
src/talaria/: AGENTS.md  __init__.py  paths.py
src/talaria/cli/: AGENTS.md  __init__.py  __main__.py  completion.py
src/talaria/hermes/: AGENTS.md  __init__.py  auxiliary.py  benchmark.py  doctor.py  doctor_free_flight.py  doctor_llm.py  log_rotate.py  refresh_catalog.py  serve_stop.py  skill_index.py  skill_install.py  skill_prune.py  skill_uninstall.py
src/talaria/hermos/: AGENTS.md  __init__.py  auxiliary.py  benchmark.py  context_cache_fix.py  diagnose.py  diagnose_free_flight.py  diagnose_llm.py  doctor.py  doctor_free_flight.py  doctor_llm.py  moa_truncation.py  refresh_catalog.py  serve_stop.py  skill_category.py  skill_index.py  skill_install.py  skill_prune.py  skill_similarity.py  skill_uninstall.py  sync_env.py
src/talaria/sync/: AGENTS.md  __init__.py  auth_tokens.py  config.py  context_cache.py  dotpath.py  env.py  mcp_serve.py  paths.py  render.py  result.py  run.py  skills.py  soul.py  writer.py  yaml_io.py
tests/: AGENTS.md  _helpers.py  conftest.py  test_auxiliary.py  test_benchmark.py  test_completion.py  test_context_cache_fix.py  test_diagnose.py  test_diagnose_aux_models.py  test_doctor.py  test_doctor_aux_models.py  test_log_rotate.py  test_moa_truncation.py  test_paths.py  test_refresh_catalog.py  test_serve_stop.py  test_skill_category.py  test_skill_index.py  test_skill_install.py  test_skill_prune.py  test_skill_similarity.py  test_skill_uninstall.py  test_sync.py  test_sync_env.py
