[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talaria"
version = "0.1.0"
description = "Winged sandals for the Hermes Agent — maintenance utilities for NousResearch/hermes-agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Raphael Bossek", email = "raphael.bossek@videoclinic.de" },
]
keywords = ["hermes-agent", "hermes", "cli", "maintenance", "ai-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.scripts]
talaria = "talaria.cli:main"

[project.urls]
Homepage = "https://github.com/raphaelbs/talaria-of-mercury"
Repository = "https://github.com/raphaelbs/talaria-of-mercury"
Issues = "https://github.com/raphaelbs/talaria-of-mercury/issues"
HermesAgent = "https://github.com/NousResearch/hermes-agent"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["talaria*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]